@@ -1,3 +1,7 @@
+2007-05-21  Vlad Seryakov  <seryakov@users.sf.net>
+
+        * nsperm/nsperm.c: Updated to support clear text passwords
+
 2007-05-20  Vlad Seryakov  <seryakov@users.sf.net>
 
         * include/ns.h:
